source/_patterns/03-organisms/sections/text-section-aside/_text-section-aside.scss
.jcc-text-section-aside__container {
  @include section-container;
}

.jcc-text-section-aside {
  @include section-wrapper;

  @include at-media(desktop) {
    @include grid-row;
    @include grid-gap;
  }

  .jcc-text-section-aside__content,
  .jcc-text-section-aside__aside {
    @include u-width(full);
  }

  .jcc-text-section-aside__content {
    @include at-media(desktop) {
      @include grid-col(8);
    }

    .jcc-card__title {
      @include has-dash-position(
        $dash-color: "mint-cool-50v",
        $dash-position: "above",
        $dash-width: 5rem
      );
      @include u-font(heading, 12);

      @include at-media(desktop) {
        padding-top: 1.1rem;
        @include u-padding-bottom(2);
        @include has-dash-position($dash-color: "mint-cool-50v", $dash-position: "right");
      }
    }

    .jcc-card__excerpt {
      @include u-font(body, 8);
      @extend .usa-prose;

      @include at-media(desktop) {
        @include u-padding-right(4);
      }
    }
  }

  .jcc-text-section-aside__aside {
    @include at-media(desktop) {
      @include grid-col(4);
    }

    .jcc-card {
      @include at-media(desktop) {
        @include u-margin-top(7);
      }
    }

    .jcc-card__title {
      @include has-dash-position($dash-color: "mint-cool-50v", $dash-position: "above");
      text-transform: uppercase;
      @include u-font(ui, 8);
      @include u-padding-top(4);
      @include u-padding-bottom(2);
    }
  }
}

